--- a/Aula14/estilo.css
+++ b/Aula14/estilo.css
@@ -1,26 +1,28 @@
-body{
-    background: rgb(91, 204, 224);
-    font: normal 15pt Arial;
-}
-
-header{
-    color: white;
-    text-align: center;
-
-}
-
-section{
-    background: white;
-    border-radius: 10px;
-    padding: 15px;
-    width: 500px;
-    margin: auto;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
-}
-
-footer{
-    color: white;
-    text-align: center;
-    font-style: italic;
-
-}
+    body {
+        background: rgb(91, 204, 224);
+        font: normal 15pt Arial;
+    }
+    
+    header {
+        color: white;
+        text-align: center;
+    }
+    
+    section {
+        background: white;
+        border-radius: 10px;
+        padding: 15px;
+        width: 450px;
+        margin: auto;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+    }
+    
+    img#foto {
+        margin: 30px;
+    }
+    
+    footer {
+        color: black;
+        text-align: center;
+        font-style: italic;
+    }
