--- a/Aula15-extra/Calculadora/estilo.css
+++ b/Aula15-extra/Calculadora/estilo.css
@@ -1,15 +1,15 @@
 body {
-    background: rgba(70, 220, 240);
+    background: rgb(1, 222, 251);
 }
 
 header {
     font: bold 20pt Arial;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 
 section#corpo div#botao {
-    background-color: white;
+    background-color: rgb(255, 254, 242);
     width: 500px;
     border-radius: 10px;
     padding: 10px;
@@ -56,9 +56,10 @@ div#botao input#btnP {
     margin: 0px 5px 0px 5px;
 }
 
-div#botao input#soma {
+div#botao input#resultado {
     font: bold 30pt Arial;
-    background: rgb(38, 207, 223);
+    color: white;
+    background: rgb(1, 2, 80);
     width: 100px;
     border-radius: 10px;
     margin: 0px 5px 0px 5px;
@@ -88,7 +89,7 @@ div#botao input#btn3 {
     margin: 0px 5px 0px 5px;
 }
 
-div#botao input#subtrair {
+div#botao input#somar {
     font: bold 30pt Arial;
     background: rgb(38, 207, 223);
     width: 100px;
@@ -120,7 +121,7 @@ div#botao input#btn6 {
     margin: 0px 5px 0px 5px;
 }
 
-div#botao input#multiplicar {
+div#botao input#subtrair {
     font: bold 30pt Arial;
     background: rgb(38, 207, 223);
     width: 100px;
@@ -145,6 +146,39 @@ div#botao input#btn8 {
 }
 
 div#botao input#btn9 {
+    font: bold 30pt Arial;
+    background: rgb(38, 207, 223);
+    width: 100px;
+    border-radius: 10px;
+    margin: 0px 5px 0px 5px;
+}
+
+div#botao input#multiplicar {
+    font: bold 30pt Arial;
+    background: rgb(38, 207, 223);
+    width: 100px;
+    border-radius: 10px;
+    margin: 0px 5px 0px 5px;
+}
+
+div#botao input#btnCE {
+    font: bold 30pt Arial;
+    color: white;
+    background: rgb(18, 92, 0);
+    width: 100px;
+    border-radius: 10px;
+    margin: 0px 5px 0px 5px;
+}
+
+div#botao input#btnPA {
+    font: bold 30pt Arial;
+    background: rgb(38, 207, 223);
+    width: 100px;
+    border-radius: 10px;
+    margin: 0px 5px 0px 5px;
+}
+
+div#botao input#btnPC {
     font: bold 30pt Arial;
     background: rgb(38, 207, 223);
     width: 100px;
