--- a/Aula17/estilo.css
+++ b/Aula17/estilo.css
@@ -31,7 +31,7 @@ input#txtn2 {
     width: 80px;
 }
 
-input#passe {
+input#passo {
     font: normal 15pt Arial;
     margin: 10px 10px 10xp 10px;
     width: 80px;
